Adding Abraham part: range of capabilities and users engagement

--- a/References.bib
+++ b/References.bib
@@ -122,3 +122,10 @@ keywords={Business And Economics; SURVEYS, POLLS & RESEARCH; Automation; Artific
 language={English},
 url={https://search.proquest.com/docview/1855327260?accountid=28915},
 }
+
+@misc{khalaf2017their_sn,
+  title={On Their Tenth Anniversary, Mobile Apps Start Eating Their Own},
+  author={Khalaf, Simon},
+  year={2017},
+  publisher={Flurrymobile. tumblr. com [recurso en l{\'\i}nea] Disponible en: http://flurrymobile. tumblr. com/post/155761509355/on-their-tenth-anniversary-mobile-apps-start [Consultado 28 de Enero de 2017]}
+}
