--- a/main.tex
+++ b/main.tex
@@ -136,46 +136,108 @@ Chatbots are the result of an evolution of more than 30 years. The first convers
  
 In the 1990s, companies started to implemented telephone IVRs, systems of interactive voice response and in this decade, Richard Wallace developed ALICE. It uses Artificial Intelligence Mark-up Language (AIML) records; they are designed to store information for the chatbot similar an XML.\cite{ wallace2008alice_sn}
 
+Now at day chatbots are getting more popular. An overwhelming increment of 394\% of people tat uses messaging and social apps, as Flurry Analytics reported on 2016, is a factor \cite{khalaf2017their_sn}. Also, thanks to the flexibility of chatbot they have been included in deferments scopes such as e-commerce, e-learning, entertainment, health assistance and every day more applications are being discovered. This without mention the stellar chatbot engines from the big tech companies like IBM Watson, Facebook Messenger, Microsoft XiaoIce, Apple Siri, etc. \cite{ io2017chatbots_08289883}.
+
+\section{\label{sec:level1}Range of Capabilities}
+People today want information fast. They have little patience for a subpar experience and they expect answers on their terms and their schedule. This is true across all demographics, but particularly acute amongst younger users.
+
+In many industries now, user experience is perhaps the single most important differentiator, and it is clear that something must change to keep pace with the changing demands of beneficiaries.
+
+Users demand 24/7 attention, immediate, digestible and useful. For the companies this requirement has become an opportunity to improve their customer services models and to add their customer strategies
+experience In view of this, chatbots are positioned as main players of innovation. Gartner estimates that more than 85\% of the service centers client, will be operated by bots in 2020.
+Brands should become more proactive and anticipate needs of your customers. Managing interactivity will be one of the central functions of the customer experience centers. Intelligent automation will become relevant in the new stage of innovation, driven by the Artificial Intelligence, and a new generation of self-service. 
+
+Omnichannel, real-time attention and simple access to information they have become a challenge to improve the architecture of experiences. The chatbots begin to be understood as one of the ways to improve even completely revolutionize the experience that currently people have with the brands.
+
+A very interesting dumbbell for companies. The metrics that can be obtained help create predictive analytics: what will happen to the market, customers and the business in the near future. Chatbots can become the precise medium for receiving critical information from the business that serves as a basis for new business strategies with a high level of customization and automation.
+
+Chatbots can merge all the services of a company. From the purchase of movie tickets, to booking a hotel or flight, and even answer frequently asked questions and give immediate solution. All through in one messaging application.
+
+Currently the push notifications are the way to do outbound marketing. Brands can schedule promotions and launch them without customization as long day Users are full of notifications out of context.
+
+The chatbots respond to the micromomentos of the people and their level of understanding allows you to make predictions of purchase. For example, if a person bought tickets to watch his favorite team's football game, the chatbot can notify you about the following entries and propose the best seats, suggest that you purchase the special edition cap or you may notice how to get to the stadium, mention nearby parking lots and can even buy food and beverages with a special promotion before reaching the event.
+
+All without having to leave your messaging platform. It will not be necessary that he resorts to the app to buy his tickets or to the web site to consult the prices of souvenirs, or open the browser to trace your route.
 
 
-%\section{\label{sec:level1}Creating User’s Engagement}
-%
-%Chatbots work most likely humans handle technical support. The chatbot is the medium responding when a customer starts a conversation looking for support. For example, if a trader requests the price of Litecoin, using the information available, the chatbot would immediately respond in the same way as a human would: “George, you recently asked me about Litecoin. Would you like to trade Litecoin, Bitcoin, Ether and 100+ more cryptocurrencies on our new multi-asset trading platform? Click here to find out more”.
-%
-%
-%A Chatbot can create engagement between business and customers without human interaction. This engagement can be created through small talks: it could be started by sending alerts, for example: “Notify me when a Bitcoin is less than \$7000”; if this event occurs, the chatbot notifies the user adding a call to action “Would you like to trade the Bitcoin now?”. It could broadcast general messages to a wider audience to crate engagement: “Federal Reserve Governor speaks at 3:15pm EST, don’t forget to top up your account!”
-% 
-%Chatbots could also be connected to a trading platform where the chatbot analyze the trader’s exposure to the market and warn of potential threats, for example, “The U.S. Nonfarm Payrolls are out today at 13:30 GMT, which may cause significant volatility. Would you like to manage your positions now?”
-% 
-%With the past of the time the chatbot can become smarter by learning from the user’s deposit history, open positions and margin requirements so it can make calls-to-action more targeted: \textit{“Your equity is \$1040.34. Should EUR/USD drop more than 100 pips, your position “\#123 Buy 1 lot EUR/USD @ 1.12345” will be liquidated. Would you like to top up your account to avoid this? The suggested amount is \$450”}.
-%
-%\section{\label{sec:level1}Trade and Transactions via Chat}
-%
-%Currently the push notifications are the way to do outbound marketing.
-%Brands can schedule promotions and launch them without customization as long day Users are full of notifications out of context.
-%
-%
-%The chatbots respond to the micromomentos of the people and their level of understanding allows you to make predictions of purchase. For example, if a person bought tickets to watch his favorite team's football game, the chatbot can notify you about the following entries and propose the best seats, suggest that you purchase the special edition cap or you may notice how to get to the stadium, mention nearby parking lots and can even buy food and beverages with a special promotion before reaching the event.
-%
-%
-%All without having to leave your messaging platform. It will not be necessary that he resorts to the app to buy his tickets or to the web site to consult the prices of souvenirs, or open the browser to trace your route.
-%
-%\section{\label{sec:level1}Functionality}
-%
-%Intelligent Wallet ™ works so that the client specifies one or multiple “Intents” that correspond to a single action or a question the user wants to do. A show.coins intent could, for example, display the best coin to trade during the day for the user. Examples, like “What’s the bullish?” or “Give me the bullish.” The platform can then use these examples with machine learning to match users queries to the correct intent.
-%
-%\includegraphics[scale=0.40]{img/Chatbot.png}\vspace*{1cm}
-%
-%Instead of browsing a website, you will have a conversation with the bot, mirroring the type of experience you would get when you go into the complete platform.
-%
-%\section{\label{sec:level1}Crypto Currency Services}
-%Through the platform two main services can be provided\: Investment Advice and Information Management. The first one has to do with the delivery of recommendations or personalized advices to our users, which suggest the investment decision making about the cryptocurrency. The second one provides Market Information and Individual Account balances.
-%
-%
-%In order to provide the Investment Advice service Intelligent Wallet ™ requires you to fill some questionnaires  which lead us to determine your experience with finance, cryptocurrencies,situation and financial capabilities , the investment objective with the finality of give you suitable advices according to your investment needs.
-%
-%\includegraphics[scale=0.65]{img/risks.png}\vspace*{1.5cm}
-%
+
+\section{\label{sec:level1}Creating User’s Engagement}
+Chatbots work most likely humans handle technical support. The chatbot is the medium responding when a customer starts a conversation looking for support. For example, if a trader requests the price of Litecoin, using the information available, the chatbot would immediately respond in the same way as a human would: “George, you recently asked me about Litecoin. Would you like to trade Litecoin, Bitcoin, Ether and 100+ more cryptocurrencies on our new multi-asset trading platform? Click here to find out more”.
+
+A Chatbot can create engagement between business and customers without human interaction. This engagement can be created through small talks: it could be started by sending alerts, for example: “Notify me when a Bitcoin is less than \$7000”; if this event occurs, the chatbot notifies the user adding a call to action “Would you like to trade the Bitcoin now?”. It could broadcast general messages to a wider audience to crate engagement: “Federal Reserve Governor speaks at 3:15pm EST, don’t forget to top up your account!”
+
+Chatbots could also be connected to a trading platform where the chatbot analyze the trader’s exposure to the market and warn of potential threats, for example, “The U.S. Nonfarm Payrolls are out today at 13:30 GMT, which may cause significant volatility. Would you like to manage your positions now?”
+ 
+With the past of the time the chatbot can become smarter by learning from the user’s deposit history, open positions and margin requirements so it can make calls-to-action more targeted: “Your equity is \$1040.34. Should EUR/USD drop more than 100 pips, your position “ Buy 1 lot EUR/USD \@ 1.12345” will be liquidated. Would you like to top up your account to avoid this? The suggested amount is \$450”.
+
+\section{\label{sec:level1}User Experience}
+
+The way people communicate is changing in a big way. Just compare the way users communicate today with the way you did 10 or 15 year s ago. If you’re like most people, you have shi f ted away from email and phone calls and toward Facebook Messenger , Whatsapp or even SMS. Like everyone else, you probably prefer communication that is convenient , instantaneous, and always at your fingertips . And, because most of us use our smartphones as our pr imar y PC (not to mention our primary source of contact with other s ) , we prefer communication that i s smartphone- friendly. Messaging apps are the perfect solution. They’re fast and intuitive. The responses you get are short and easy to read. And people like using them.
+
+According to Gartner:
+\begin{itemize}
+\item 52\% have hung up on a customer service call. 
+\item 33\% of Millennials are only willing to wait 1 to 3 minutes to get a response. 
+\item 56\% of Millennials have switched from one company to another because of underwhelming customer service.
+\end{itemize}
+
+
+The global use of top messaging applications surpassed the use of the top 4 social networks, and the gap has been growing, as can be evidenced by almost a 400\% increase in the use of Messaging and Social apps in 2016, accordingly to Flurry Analytics.
+
+In just about every country in the world the most frequently used app is a messaging app. They’re pervasive; everyone uses them. And this has been the case for quite some time. Messaging apps surpassed social networks in terms of monthly active users way back in early 2015.
+Chatbots can play a role on the frontline of customer service in English —or other languages— to help satisfy the needs of visitors and answer commonly asked questions , to give users what they want, when they need it, as quickly as possible. 
+
+Facebook Messenger is the most commonly used app in North America, while WhatsApp (also owned by Facebook) reigns supreme in Europe and Latin America. In China, WeChat is the hands-down winner. But regardless of the specific app, it is clear that messengers are the channel of choice for people all over the world when communicating with friends \& family.
+
+Messaging apps features the ability to build automated chatbots complete with images, videos, galleries,
+call- to-action buttons, and more—making it the app of choice for marketers and business owners looking to grow their business with messenger marketing.
+
+Chatbots can help you to deliver immediate information, and don’t require downloading a separate application - all is done through a familiar messenger window in order to increase user experience. Your chatbot can build a list by attracting new leads, nurture those leads by sending them content and answering their questions, and ultimately convert those leads into new paying customers.
+
+\section{\label{sec:level1}Broadcasting and Market Segmentation}
+
+A broadcast is a one-off, manual message that you send to people on your Messenger list. There are three different types of broadcasts you can send on Messenger Marketing, and each type has its own rules and stipulations. As a part of having a positive experience means NOT being inundated with spammy promotional messages.
+
+Subscription Broadcasts: Subscription broadcasts it’s an interactive and individualized experience for the end user. Can not contain promotions or ads, but you can also use subscription broadcasts that ask your subscribers questions. Based off of which button they click, you can then segment them into a sequence where you COULD ultimately sell them something.
+Promotional Broadcasts: a broadcast that does contain an ad or other promotional materials. You can only send promotional broadcasts to subscribers who’ve interacted with your brand on in the past 24-hours.
+Follow-Up Broadcasts: Follow-up broadcasts give you one last chance to remind your subscribers about your promotion once you send someone a Promotional Broadcast. Brands won’t be able to send any more promotional messages until the subscribers interact with their chatbot again.
+
+
+Targeting: is where brands can determine who receives the broadcast. Brands can choose to send their broadcast to users who have been tagged in a previous message, users who have subscribed to a specific sequence, or can target by demographics.
+
+Brands can also add multiple conditions to get incredibly focused in the targeting —such as sending a message only to male subscribers who have been tagged as ``likes\_ invest'' and who have not subscribed to your `` Thank You For Invest'' sequence. Eventually you can send them more information about a particular product or promotion based on their needs and interests.
+When businesses follow an exponential strategy with their broadcasts, businesses will end up building more of a relationship with the audience. They will come to know and trust businesses, because they did not just ram a single product down their throats— businesses listened to them.
+
+
+
+
+\section{\label{sec:level1}Trade and Transactions via Chat}
+
+Currently the push notifications are the way to do outbound marketing.
+Brands can schedule promotions and launch them without customization as long day Users are full of notifications out of context.
+
+
+The chatbots respond to the micromomentos of the people and their level of understanding allows you to make predictions of purchase. For example, if a person bought tickets to watch his favorite team's football game, the chatbot can notify you about the following entries and propose the best seats, suggest that you purchase the special edition cap or you may notice how to get to the stadium, mention nearby parking lots and can even buy food and beverages with a special promotion before reaching the event.
+
+
+All without having to leave your messaging platform. It will not be necessary that he resorts to the app to buy his tickets or to the web site to consult the prices of souvenirs, or open the browser to trace your route.
+
+\section{\label{sec:level1}Functionality}
+
+Intelligent Wallet ™ works so that the client specifies one or multiple “Intents” that correspond to a single action or a question the user wants to do. A show.coins intent could, for example, display the best coin to trade during the day for the user. Examples, like “What’s the bullish?” or “Give me the bullish.” The platform can then use these examples with machine learning to match users queries to the correct intent.
+
+\includegraphics[scale=0.40]{img/Chatbot.png}\vspace*{1cm}
+
+Instead of browsing a website, you will have a conversation with the bot, mirroring the type of experience you would get when you go into the complete platform.
+
+\section{\label{sec:level1}Crypto Currency Services}
+Through the platform two main services can be provided\: Investment Advice and Information Management. The first one has to do with the delivery of recommendations or personalized advices to our users, which suggest the investment decision making about the cryptocurrency. The second one provides Market Information and Individual Account balances.
+
+
+In order to provide the Investment Advice service Intelligent Wallet ™ requires you to fill some questionnaires  which lead us to determine your experience with finance, cryptocurrencies,situation and financial capabilities , the investment objective with the finality of give you suitable advices according to your investment needs.
+
+\includegraphics[scale=0.65]{img/risks.png}\vspace*{1.5cm}
+
 %\section{\label{sec:level1}Conclusion}
 %Sophisticated chatbots break new ground in conversion and activation of prospects into sales. Being a diligent conversational partner, this AI remembers the history of the dialog and is continuously self-learning. Thus, a chatbot can connect with a user on a more intimate level, it has the ability to get under a traders’ skin by adding value that improves their day-to-day lives. However, only a chatbot with a well-designed architecture and advanced functionality can enrich a company’s communications. \cite{Barbara_CL2018}
 %
