Adding Tona changes.

--- a/References.bib
+++ b/References.bib
@@ -1,4 +1,13 @@
 
+@book{lee2015natural_sn,
+  title={Natural Language Dialog Systems and Intelligent Assistants},
+  author={Lee, G.G. and Kim, H.K. and Jeong, M. and Kim, J.H.},
+  isbn={9783319192918},
+  url={https://books.google.com.mx/books?id=YgahCgAAQBAJ},
+  year={2015},
+  publisher={Springer International Publishing}
+}
+
 @article{Barbara_CL2018,
 author = {Barbara J. Grosz},
 title = {Smart Enough to Talk With Us? Foundations and Challenges for Dialogue Capable AI Systems},
@@ -111,6 +120,71 @@ isbn="978-3-642-22191-0"
   organization={IEEE}
 }
 
+@inproceedings{lee2017chatbot_07881752,
+  title={The chatbot feels you-a counseling service using emotional response generation},
+  author={Lee, Dongkeon and Oh, Kyo-Joong and Choi, Ho-Jin},
+  booktitle={Big Data and Smart Computing (BigComp), 2017 IEEE International Conference on},
+  pages={437--440},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{oh2017chatbot_0796482,
+  title={A Chatbot for Psychiatric Counseling in Mental Healthcare Service Based on Emotional Dialogue Analysis and Sentence Generation},
+  author={Oh, Kyo-Joong and Lee, Dongkun and Ko, Byungsoo and Choi, Ho-Jin},
+  booktitle={Mobile Data Management (MDM), 2017 18th IEEE International Conference on},
+  pages={371--375},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{thu2017effective_08229386,
+  title={Effective analysis of emotion-based satire detection model on various machine learning algorithms},
+  author={Thu, Pyae Phyo and Aung, Than Nwe},
+  booktitle={Consumer Electronics (GCCE), 2017 IEEE 6th Global Conference on},
+  pages={1--5},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{chebbi2018use_08364512,
+  title={On the use of pitch-based features for fear emotion detection from speech},
+  author={Chebbi, Safa and Jebara, Sofia Ben},
+  booktitle={Advanced Technologies for Signal and Image Processing (ATSIP), 2018 4th International Conference on},
+  pages={1--6},
+  year={2018},
+  organization={IEEE}
+}
+
+@inproceedings{bondu2008adaptive_04633867,
+  title={Adaptive curiosity for emotions detection in speech},
+  author={Bondu, Alexis and Lemaire, Vincent},
+  booktitle={Neural Networks, 2008. IJCNN 2008.(IEEE World Congress on Computational Intelligence). IEEE International Joint Conference on},
+  pages={674--680},
+  year={2008},
+  organization={IEEE}
+}
+
+@inproceedings{matlovic2016emotions_07753378,
+  title={Emotions detection using facial expressions recognition and EEG},
+  author={Matlovic, Tomas and Gaspar, Peter and Moro, Robert and Simko, Jakub and Bielikova, Maria},
+  booktitle={Semantic and Social Media Adaptation and Personalization (SMAP), 2016 11th International Workshop on},
+  pages={18--23},
+  year={2016},
+  organization={IEEE}
+}
+
+@inproceedings{7419068Perzylo_sn, 
+author={A. Perzylo and S. Griffiths and R. Lafrenz and A. Knoll}, 
+booktitle={2015 IEEE International Conference on Robotics and Biomimetics (ROBIO)}, 
+title={Generating grammars for natural language understanding from knowledge about actions and objects}, 
+year={2015}, 
+pages={2008-2013}, 
+keywords={control engineering computing;grammars;groupware;human-robot interaction;industrial robots;inference mechanisms;natural language interfaces;ontologies (artificial intelligence);service robots;RoboEarth framework;grammars generation;industrial human-robot collaboration;knowledge representation;natural language interface;ontologies;reasoning;service robotics;Grammar;Knowledge based systems;Natural languages;OWL;Ontologies;Service robots}, 
+doi={10.1109/ROBIO.2015.7419068}, 
+month={Dec},
+}
+
 @misc{Newswire_MarketAssessment2017,
 year={2017},
 month={Jan 05},
@@ -126,6 +200,13 @@ url={https://search.proquest.com/docview/1855327260?accountid=28915},
 @misc{khalaf2017their_sn,
   title={On Their Tenth Anniversary, Mobile Apps Start Eating Their Own},
   author={Khalaf, Simon},
+  year={2017},
+  publisher={Flurrymobile. tumblr. com [recurso en l{\'\i}nea] Disponible en: http://flurrymobile. tumblr. com/post/155761509355/on-their-tenth-anniversary-mobile-apps-start [Consultado 28 de Enero de 2017]}
+}
+
+@misc{insightsGartner_sn,
+  title={Predicts 2018: CRM Customer Service and Customer Engagement},
+  author={Michael, Maoz and Bern, Elliot and Jenny, Sussin and Olive, Huang and Jim, Robinson and Nadine, LeBlanc and Jim, Davies and Brian, Manusama},
   year={2017},
   publisher={Flurrymobile. tumblr. com [recurso en l{\'\i}nea] Disponible en: http://flurrymobile. tumblr. com/post/155761509355/on-their-tenth-anniversary-mobile-apps-start [Consultado 28 de Enero de 2017]}
 }
