--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 							fontsize=12pt%,%
 							%twocolumn
                             ]{scrartcl}	 					% KOMA-article class
-
+\usepackage{float}
 \usepackage{lipsum}													% Package to create dummy text
 
 \usepackage[english]{babel}	
@@ -130,7 +130,7 @@ One of the aims of Computer Human Interaction(CHI)is to connect with users throu
 
 
 
-As result of the need of companies to provide additional services to their customers and the success of NLP, chatbots are positioned as main players of innovation. A chatbot is a technology that makes interaction between man and machine possible by using natural language” and in the past few months, a hype about this topic has been developed\cite{LokmanDesigningDiabetic2009_266872926}. According to Credence Research, chatbots are going to be a key piece of automation for 2019 and Gartner estimates that more than 85\% of the service centers client, will be operated by bots in 2020 \cite{Newswire_MarketAssessment2017}.
+As result of the need of companies to provide additional services to their customers and the success of NLP, chatbots are positioned as main players of innovation. A chatbot is a technology that makes interaction between man and machine possible by using natural language” and in the past few months, a hype about this topic has been developed\cite{LokmanDesigningDiabetic2009_266872926}. According to Credence Research, chatbots are going to be a key piece of automation for 2019 and they \textit{``are moving aggressively beyond CRM in leading industry verticals. Stand-alone Chatbots are expected to contribute 40\% of the market by 2022''} \cite{Newswire_MarketAssessment2017}.
 
 Chatbots are the result of an evolution of more than 30 years. The first conversational bot was Eliza, invented in the 1960s by the German Joseph Wiezenbaum in the laboratory of Artificial Intelligence from the Massachusetts Institute of Technology (MIT), in U.S. It worked by looking for certain keywords; once a keyword or a tag was detected, ELIZA provided the corresponding response. \cite{ io2017chatbots_08289883}
  
@@ -170,7 +170,7 @@ Chatbots could also be connected to a trading platform where the chatbot analyze
  
 With the past of the time the chatbot can become smarter by learning from the user’s deposit history, open positions and margin requirements so it can make calls-to-action more targeted: “Your equity is \$1040.34. Should EUR/USD drop more than 100 pips, your position “ Buy 1 lot EUR/USD \@ 1.12345” will be liquidated. Would you like to top up your account to avoid this? The suggested amount is \$450”.
 
-\section{\label{sec:level1}User Experience}
+\subsection{\label{sec:level2}User Experience}
 
 The way people communicate is changing in a big way. Just compare the way users communicate today with the way you did 10 or 15 year s ago. If you’re like most people, you have shi f ted away from email and phone calls and toward Facebook Messenger , Whatsapp or even SMS. Like everyone else, you probably prefer communication that is convenient , instantaneous, and always at your fingertips . And, because most of us use our smartphones as our pr imar y PC (not to mention our primary source of contact with other s ) , we prefer communication that i s smartphone- friendly. Messaging apps are the perfect solution. They’re fast and intuitive. The responses you get are short and easy to read. And people like using them.
 
@@ -194,7 +194,7 @@ call- to-action buttons, and more—making it the app of choice for marketers an
 
 Chatbots can help you to deliver immediate information, and don’t require downloading a separate application - all is done through a familiar messenger window in order to increase user experience. Your chatbot can build a list by attracting new leads, nurture those leads by sending them content and answering their questions, and ultimately convert those leads into new paying customers.
 
-\section{\label{sec:level1}Broadcasting and Market Segmentation}
+\subsection{\label{sec:level2}Broadcasting and Market Segmentation}
 
 A broadcast is a one-off, manual message that you send to people on your Messenger list. There are three different types of broadcasts you can send on Messenger Marketing, and each type has its own rules and stipulations. As a part of having a positive experience means NOT being inundated with spammy promotional messages.
 
@@ -211,37 +211,68 @@ When businesses follow an exponential strategy with their broadcasts, businesses
 
 
 
-\section{\label{sec:level1}Trade and Transactions via Chat}
+\section{\label{sec:level1}Transactions via Chatbot}
 
+\subsection{\label{sec:level1}Online Trading and Blockchain}
+
+Introducing Intelligent Wallet™ in the transactions sector can bring a huge change in customer experience and keep up the pace with changing customer expectations. Chatbot has the potential to automate all the repetitive questions which are time-consuming and has a huge impact on the departmentís performance. 
+The trading industry has a wide range of products and services for its customers. But, not all customers are attentive to every service. Chatbots can deliver personalized offers to customers based on their profile data or life events. Highly-targeted products and services are brought to the customers at the right time by the preferred messaging apps which can intensely increase conversion rates. By using this channel for communication, platforms can achieve a higher market value without annoying the customer.
+“There is a lot of interest in the FinTech community in using automated messengers to interact with customers,” Alexey Kulyk, Director of Products at the international payment provider Maxpay, shares, expressing confidence that using messengers and chatbots are more than just a fad. He believes that chatbots are becoming an integral part of any marketing and customer satisfaction plan.
+While Apple’s Siri and Amazon’s Alexa are household names now, most chatbots live in social media. There are over 34,000 chatbots on Facebook Messenger alone, providing information to potential customers and driving engagement. Today’s consumers need this extra engagement to be drawn in. Integrating payments capabilities into messaging apps could be the key to making chatbots the next big platform.
+A successful chatbot has to be able to perform a task more efficiently than can be done manually. As such, banks should develop chatbots that effectively automate basic and time-consuming tasks. This will free up human staffers' time for more complex inquiries, thus improving customer relations and loyalty.
 Currently the push notifications are the way to do outbound marketing.
 Brands can schedule promotions and launch them without customization as long day Users are full of notifications out of context.
 
-
 The chatbots respond to the micromomentos of the people and their level of understanding allows you to make predictions of purchase. For example, if a person bought tickets to watch his favorite team's football game, the chatbot can notify you about the following entries and propose the best seats, suggest that you purchase the special edition cap or you may notice how to get to the stadium, mention nearby parking lots and can even buy food and beverages with a special promotion before reaching the event.
 
-
 All without having to leave your messaging platform. It will not be necessary that he resorts to the app to buy his tickets or to the web site to consult the prices of souvenirs, or open the browser to trace your route.
+ 
+The basis of blockchain technology is very simple and comes down to the following algorithm: there is a record of transaction operated between two counterparties. It is sent by the DLT to a register journal on regular basis. Each counterparty has their copied sample of register journal. If someone tries to delete or edit details of a transaction, the system will not let them do that because firstly it will compare the record with other counterparties’ register journals.l 
 
-\section{\label{sec:level1}Functionality}
+\subsection{\label{sec:level1}Cryptocurrency Services}
+
+Unlike the stock markets, the cryptocurrency market never closes and never sleeps, which can be a highly stressful scenario for traders and even casual investors in the industry. Users familiar with crypto investment will also be familiar with the (joyful or sinking) feeling of waking up in the morning to be greeted by a pleasant or unpleasant surprise when they check their portfolio and see large gains or losses.
+
+The explosion of popularity in cryptocurrency has also resulted in a big increase in the number of trading bots available, either for free from open-source platforms or licensed to users in exchange for flat fees. 
+
+In essence, Intelligent Wallet™ crypto service that interacts directly with financial exchanges (often using API’s to obtain and interpret relevant information) and places buy or sell orders on your behalf depending on the interpretation of the market data. The bots make these decisions by monitoring the market’s price movement and reacting according to a set of predefined and pre-programmed rules. Typically, a trading bot will analyze market actions, such as volume, orders, price, and time, although they can generally be programmed to suit your own tastes and preferences. 
+
+
+Through the platform two main services can be provided\: Investment Advice and Information Management. The first one has to do with the delivery of recommendations or personalized advices to our users, which suggest the investment decision making about the cryptocurrency. The second one provides Market Information and Individual Account balances.
+
+In order to provide the Investment Advice service Intelligent Wallet ™ requires you to fill some questionnaires  which lead to determine the user's experience with finance, cryptocurrencies,situation and financial capabilities , the investment objective with the finality of give you suitable advices according to their investment needs.
+
+
+
+
+\section{\label{sec:level1}Emotion Detection Engine Potential}
+
+\subsection{\label{sec:level1}Chatbot Engine}
+Chatbots have a high level flow where they are in the place where a complete query of the input is made, this is broken down into intentions and identities. An intention is an objective or objective expressed in the entry of a client, such as answering a question or processing an invoice payment. An entity represents an object class or a type of data that is relevant to a user's purpose. By recognizing the entities that are mentioned in the user input, the dialogue system can choose the specific actions that must be performed to fulfill an intention \cite{lee2015natural_sn} \cite{7419068Perzylo_sn}.
+
+For the flow of a dialogue system, first an input is received and processed by intentions detectors to infer in a diffuse way the intentions of the user. In parallel there is also an entity detector which also diffuses, from substrings in the input, the type of entity referred to. Finally a function is called and takes the intentions and the entities as input producing an output, this cycle occurs as many times as necessary. Although there are many variations in the different parts, this structure is the one used in a general way.\cite{lee2015natural_sn}.
+
+
+
+
+\begin{figure}[H]
+\centering
+\includegraphics[scale=1.5]{img/Pipeline.JPG}
+\caption{Data flow that most dialogue systems possess}
+\label{DiagIntent}
+\end{figure}
+
 
 Intelligent Wallet ™ works so that the client specifies one or multiple “Intents” that correspond to a single action or a question the user wants to do. A show.coins intent could, for example, display the best coin to trade during the day for the user. Examples, like “What’s the bullish?” or “Give me the bullish.” The platform can then use these examples with machine learning to match users queries to the correct intent.
 
-\includegraphics[scale=0.40]{img/Chatbot.png}\vspace*{1cm}
-
 Instead of browsing a website, you will have a conversation with the bot, mirroring the type of experience you would get when you go into the complete platform.
 
-\section{\label{sec:level1}Crypto Currency Services}
-Through the platform two main services can be provided\: Investment Advice and Information Management. The first one has to do with the delivery of recommendations or personalized advices to our users, which suggest the investment decision making about the cryptocurrency. The second one provides Market Information and Individual Account balances.
-
-
-In order to provide the Investment Advice service Intelligent Wallet ™ requires you to fill some questionnaires  which lead us to determine your experience with finance, cryptocurrencies,situation and financial capabilities , the investment objective with the finality of give you suitable advices according to your investment needs.
-
-\includegraphics[scale=0.65]{img/risks.png}\vspace*{1.5cm}
 
 %\section{\label{sec:level1}Conclusion}
 %Sophisticated chatbots break new ground in conversion and activation of prospects into sales. Being a diligent conversational partner, this AI remembers the history of the dialog and is continuously self-learning. Thus, a chatbot can connect with a user on a more intimate level, it has the ability to get under a traders’ skin by adding value that improves their day-to-day lives. However, only a chatbot with a well-designed architecture and advanced functionality can enrich a company’s communications. \cite{Barbara_CL2018}
 %
 %Chatbots still remain an underrated channel these days among brokerages, it is an appropriate time to explore whether your business may need one.
+
 
 \newpage
 \bibliography{References}
